unpackaged/main/default/objects/Contact/fields/Echo_relationship_owner__c.field-meta.xml
<CustomField>
    <fullName>Echo_relationship_owner__c</fullName>
    <label>Echo relationship owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monica Mackintosh</fullName>
            </value>
            <value>
                <fullName>Andy Mack</fullName>
            </value>
            <value>
                <fullName>Greg Horne</fullName>
            </value>
            <value>
                <fullName>Richard Harvey</fullName>
            </value>
            <value>
                <fullName>Tony Kelly</fullName>
            </value>
            <value>
                <fullName>Lloyd Birkhead</fullName>
            </value>
            <value>
                <fullName>Mark Alfer</fullName>
            </value>
            <value>
                <fullName>Nathan Barton</fullName>
            </value>
            <value>
                <fullName>Jim White</fullName>
                <isActive>false</isActive>
                <label>Jim White</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>