unpackaged/main/default/objects/Contact/fields/Job_type__c.field-meta.xml
<CustomField>
    <fullName>Job_type__c</fullName>
    <label>Job type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CXO</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Programme / project</fullName>
            </value>
            <value>
                <fullName>Marketing / sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>