unpackaged/main/default/objects/Contact/fields/Next_step__c.field-meta.xml
<CustomField>
    <fullName>Next_step__c</fullName>
    <label>Next step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo required</fullName>
            </value>
            <value>
                <fullName>Proposal required</fullName>
            </value>
            <value>
                <fullName>Arrange meeting</fullName>
            </value>
            <value>
                <fullName>Send marketing material</fullName>
            </value>
            <value>
                <fullName>Keep in contact - phone</fullName>
            </value>
            <value>
                <fullName>Keep in contact - email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>